test/end-to-end/compile-errors/function-pointer-lambda.crow
main void()
	f void function() = () => ()
	f[]
	()
